--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Pac-Chapull</title>
+    <link rel="image_src" href="http://sly777.github.io/Pac-Chapull/images/pac_1.png" />
+    <meta property="og:title" content="Pac-Chapull | Pacman Clone" />
+    <meta property="og:description" content="GEZİ PARKINA SAHİP ÇIK" />
+    <meta property="og:image" content="http://sly777.github.io/Pac-Chapull/images/pac_1.png" />
     
     <style type="text/css">
       @font-face {
