--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta charset="utf-8" />
     <title>Pac-Chapull</title>
-      <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-      <![endif]-->
-      <!--[if lt IE 8]>
-      <link rel="stylesheet" href="stylesheets/ie.css">
-      <![endif]-->
-      <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="image_src" href="http://sly777.github.io/Pac-Chapull/images/pac_1.png" />
+    <meta property="og:title" content="Pac-Chapull | Pacman Clone" />
+    <meta property="og:description" content="GEZİ PARKINA SAHİP ÇIK" />
+    <meta property="og:image" content="http://sly777.github.io/Pac-Chapull/images/pac_1.png" />
     
     <style type="text/css">
       @font-face {
@@ -102,7 +97,7 @@
 
         <ul>
             <li><a href="http://Be.net/begumbaysal" target="_blank">Designed by Begüm Baysal</a></li>
-            <li><a href="http://github.com/Sly777" target="_blank">Coded by İlker Güller</a></li>
+            <li><a href="http://github.com/Sly777">Coded by İlker Güller</a></li>
         </ul>
     </div>
 
@@ -122,17 +117,6 @@
         "(firefox 3.6+, Chrome 4+, Opera 10+ and Safari 4+)</small>";
     }
   </script>
-
-    <script type="text/javascript">
-        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-    </script>
-    <script type="text/javascript">
-        try {
-            var pageTracker = _gat._getTracker("UA-22085813-8");
-            pageTracker._trackPageview();
-        } catch(err) {}
-    </script>
 
 </body>
 </html>
