Glitching düzeltildi, html duzenlendi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta property="og:title" content="Pac-Chapull | Pacman Clone" />
     <meta property="og:description" content="GEZİ PARKINA SAHİP ÇIK" />
     <meta property="og:image" content="http://sly777.github.io/Pac-Chapull/images/pac_1.png" />
+    <meta name="description" content="Pacman Clone Game - Gezi Parkına Sahip Çık #occupygezi #direngezi">
+    <meta name="keywords" content="pacman,pacchapull,çapulcu,gezi,oyun,direniş,occupygezi,direngezi">
+    <meta name="author" content="Begüm Baysal & İlker Güller">
 
     <style type="text/css">
       @font-face {
@@ -100,6 +103,8 @@
             js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=163084173850239";
             fjs.parentNode.insertBefore(js, fjs);
         }(document, 'script', 'facebook-jssdk'));</script>
+
+        <div class="fb-like" data-href="http://sly777.github.io/Pac-Chapull/" data-send="true" data-layout="button_count" data-width="450" data-show-faces="true" data-font="segoe ui" data-colorscheme="dark"></div>
 
         <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://sly777.github.io/Pac-Chapull/">Tweet</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
